# expense_tg_bot

./: .buildinfo  README.md  bot.py  config.py  dispatcher.py  genindex.html  index.html  middleware.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run_bot.py  search.html  searchindex.js  setup.cfg
.github/workflows/: documentation.yaml
_sources/: index.rst.txt
_sources/pages/: bot.rst.txt  config.rst.txt  index.rst.txt  modules.rst.txt  run_bot.rst.txt
_sources/pages/database/: database.config.rst.txt  database.init_db.rst.txt
_sources/pages/handlers/: handlers.keyboards.rst.txt
_sources/pages/services/: index.rst.txt
database/: config.py  database_utils.py  exceptions.py  init_db.py  models.py
database/crud/: categories.py  expenses.py  user_config.py  user_configs.py  users.py
docs/source/: conf.py  index.rst
docs/source/pages/: dispatcher.rst  middleware.rst
handlers/: error_utils.py  handlers_utils.py  keyboard.py  keyboards.py  texts.py
handlers/add_expense/: handler.py  states.py
handlers/basic/: default_handler.py  keyboard.py  registration_handler.py  start_handler.py  states.py
handlers/registration/: handler.py  registration_handler.py  states.py
handlers/settings_menu/: handler.py  states.py
handlers/settings_menu/categories_settings_menu/: handler.py  states.py
handlers/settings_menu/change_currency/: handler.py  states.py
handlers/settings_menu/change_language/: handler.py  states.py
handlers/statistics_menu/: handler.py  states.py  statistics_utils.py
handlers/statistics_menu/custom_statistics/: constants.py  handler.py  states.py  utils.py
handlers/statistics_menu/month_statistics/: constants.py  handler.py  states.py
locales/en/LC_MESSAGES/: texts.ftl
locales/ru/LC_MESSAGES/: texts.ftl
pages/: bot.html  config.html  dispatcher.html  index.html  middleware.html  modules.html  run_bot.html
pages/database/: database.config.html  database.database_utils.html  database.exceptions.html  database.init_db.html  database.models.html  index.html  modules.html
pages/database/crud/: database.crud.categories.html  database.crud.expenses.html  database.crud.user_configs.html  index.html  (+1 more)
pages/handlers/: handlers.error_utils.html  handlers.handlers_utils.html  handlers.keyboards.html  index.html  modules.html
pages/services/: index.html  services.expenses_service.html  services.user_configs_service.html  services.users_service.html
services/: expenses_service.py  user_config_service.py  user_configs_service.py  users_service.py
(+110 files in other folders)
